# csrd-distro-automation

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  SOP.md  pyproject.toml
data/: test_data.csv
src/automation/: form_submitter.py
src/cli/: check.py  run_cli.py
src/eventbrite/: fetcher.py  question_utils.py
src/web/: app.py
static/: style.css
templates/: index.html
