[project]
name = "distro-automation"
version = "1.0.0"
description = "Automate fetching Eventbrite attendees and filling distribution list forms."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.0.0",
    "playwright>=1.40.0",
    "flask>=3.0.0",
    "requests>=2.33.1",
]

[tool.uv]
managed = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
